--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <h3 class="home__education">Interior Designer & Graphic Designer</h3>
 
                     <div class="home__button">
-                        <a download="" href="" class="button button--ghost">
+                        <a download="" href="Documents/REBECCA MUOKI. RESUME..pdf" class="button button--ghost">
                             Download CV
                         </a>
 
@@ -131,12 +131,12 @@
                         <div class="about__box">
                             <i class='bx bx-award about__icon'></i>
                             <h3 class="about__title">Experience</h3>
-                            <span class="about__subtitle">8 Years Working</span>
+                            <span class="about__subtitle">4 Years Working</span>
                         </div>
                         <div class="about__box">
                             <i class='bx bx-briefcase-alt about__icon'></i>
                             <h3 class="about__title">Completed</h3>
-                            <span class="about__subtitle">48+ Projects</span>
+                            <span class="about__subtitle">50 + Projects</span>
                         </div>
                         <div class="about__box">
                             <i class='bx bx-support about__icon'></i>
@@ -146,8 +146,11 @@
                     </div>
 
                     <p class="about__description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam voluptate reiciendis natus nihil! Voluptatem dolore fugiat, debitis minima optio sit soluta a quasi fuga illum id? Voluptatibus maiores quasi temporibus.
-                    </p>
+                        Highly creative and multi talented Graphic designer with extensive experience in multimedia, marketing and print design. Exceptional collaborative and interpersonal skills; dynamic team
+                        player with well-developed written and verbal communication abilities. Highly skilled in client
+                        and vendor relations and negotiations; talented at building and maintaining “win-win” partnerships. Passionate and inventive creator of innovative marketing strategies and
+                        campaigns; accustomed to performing in deadline-driven environments with an emphasis on
+                        working within budget requirements.                    </p>
 
                     <a href="#contact" class="button about__button-contact">Contact Me</a>
                 </div>
@@ -161,7 +164,7 @@
 
             <div class="skills__container container grid">
                 <div class="skills__content">
-                    <h3 class="skills__title">Interior <br> Designing</h3>
+                    <h3 class="skills__title">Professional <br> Skills</h3>
 
                     <div class="skills__box">
                         <div class="skills__group">
@@ -169,7 +172,7 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">lorem</h3>
+                                    <h3 class="skills__name">Adobe In Design</h3>
                                     <span class="skills__level">Advanced</span>
                                 </div>
                             </div>
@@ -178,7 +181,7 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">Lorem</h3>
+                                    <h3 class="skills__name">Adobe Illustrator</h3>
                                     <span class="skills__level">Advanced</span>
                                 </div>
                             </div>
@@ -187,7 +190,7 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">Lorem</h3>
+                                    <h3 class="skills__name">Adobe Photoshop</h3>
                                     <span class="skills__level">Advanced</span>
                                 </div>
                             </div>
@@ -198,16 +201,7 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">Lorem</h3>
-                                    <span class="skills__level">Intermediate</span>
-                                </div>
-                            </div>
-
-                            <div class="skills__data">
-                                <i class='bx bxs-badge-check'></i>
-
-                                <div>
-                                    <h3 class="skills__name">Lorem</h3>
+                                    <h3 class="skills__name">Adobe Premium</h3>
                                     <span class="skills__level">Advanced</span>
                                 </div>
                             </div>
@@ -216,7 +210,16 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">Lorem</h3>
+                                    <h3 class="skills__name">Waspi</h3>
+                                    <span class="skills__level">Advanced</span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <i class='bx bxs-badge-check'></i>
+
+                                <div>
+                                    <h3 class="skills__name">Printing Process</h3>
                                     <span class="skills__level">Advanced</span>
                                 </div>
                             </div>
@@ -234,7 +237,7 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">Lorem</h3>
+                                    <h3 class="skills__name">Information Design</h3>
                                     <span class="skills__level">Advanced</span>
                                 </div>
                             </div>
@@ -243,7 +246,7 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">Lorem</h3>
+                                    <h3 class="skills__name">Logo Design</h3>
                                     <span class="skills__level">Advanced</span>
                                 </div>
                             </div>
@@ -252,7 +255,7 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">Lorem</h3>
+                                    <h3 class="skills__name">Branding Design</h3>
                                     <span class="skills__level">Advanced</span>
                                 </div>
                             </div>
@@ -263,16 +266,7 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">Lorem</h3>
-                                    <span class="skills__level">Intermediate</span>
-                                </div>
-                            </div>
-
-                            <div class="skills__data">
-                                <i class='bx bxs-badge-check'></i>
-
-                                <div>
-                                    <h3 class="skills__name">Lorem</h3>
+                                    <h3 class="skills__name">Print Design</h3>
                                     <span class="skills__level">Advanced</span>
                                 </div>
                             </div>
@@ -281,7 +275,16 @@
                                 <i class='bx bxs-badge-check'></i>
 
                                 <div>
-                                    <h3 class="skills__name">Lorem</h3>
+                                    <h3 class="skills__name">Packaging Design</h3>
+                                    <span class="skills__level">Advanced</span>
+                                </div>
+                            </div>
+
+                            <div class="skills__data">
+                                <i class='bx bxs-badge-check'></i>
+
+                                <div>
+                                    <h3 class="skills__name">Advertisiment Design</h3>
                                     <span class="skills__level">Advanced</span>
                                 </div>
                             </div>
@@ -490,19 +493,19 @@
 
             <div class="work__container container grid">
                 <div class="work__card mix web">
-                    <img src="assets/img/work1.jpg" alt="" class="work__img">
+                    <img src="images/codioful-formerly-gradienta-LeG68PrXA6Y-unsplash.jpg" alt="" class="work__img">
 
                     <h3 class="work__title">Logo Design</h3>
 
-                    <a href="#" class="work__button">
+                    <a href="logo.html" class="work__button">
                         Demo <i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
 
                 <div class="work__card mix movil">
-                    <img src="assets/img/work2.jpg" alt="" class="work__img">
+                    <img src="images/nathan-mullet-dGdlQ56r--w-unsplash.jpg" alt="" class="work__img">
 
-                    <h3 class="work__title">Poster Design</h3>
+                    <h3 class="work__title"> Design</h3>
 
                     <a href="#" class="work__button">
                         Demo <i class='bx bx-right-arrow work__icon'></i>
@@ -510,31 +513,31 @@
                 </div>
 
                 <div class="work__card mix design">
-                    <img src="assets/img/work3.jpg" alt="" class="work__img">
+                    <img src="images/peter-olexa-Q5GnQxjX7Jk-unsplash.jpg" alt="" class="work__img">
 
                     <h3 class="work__title">Brand Design</h3>
 
-                    <a href="#" class="work__button">
+                    <a href="brands.html" class="work__button">
                         Demo <i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
 
                 <div class="work__card mix web">
-                    <img src="assets/img/work4.jpg" alt="" class="work__img">
+                    <img src="images/codioful-formerly-gradienta-LeG68PrXA6Y-unsplash.jpg" alt="" class="work__img">
 
-                    <h3 class="work__title">Logo Design</h3>
+                    <h3 class="work__title">Posters & Flyers</h3>
 
-                    <a href="#" class="work__button">
+                    <a href="posters.html" class="work__button">
                         Demo <i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
 
                 <div class="work__card mix movil">
-                    <img src="assets/img/work5.jpg" alt="" class="work__img">
+                    <img src="images/spacejoy-EVjqpcn79AM-unsplash.jpg" alt="" class="work__img">
 
                     <h3 class="work__title">Interior Design</h3>
 
-                    <a href="#" class="work__button">
+                    <a href="Interior.html" class="work__button">
                         Demo <i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
@@ -597,7 +600,7 @@
                         <div class="contact__card">
                             <i class='bx bx-mail-send contact__card-icon'></i>
                             <h3 class="contact__card-title">Email</h3>
-                            <span class="contact__card-data">user@gmail.com</span>
+                            <span class="contact__card-data">beckymueni501@gmail.com</span>
 
                             <a href="mailto:example@domain.com" target="_blank" class="contact__button">
                                 Write Me <i class='bx bx-right-arrow contact__button-icon'></i>
@@ -620,7 +623,7 @@
                             <h3 class="contact__card-title">Instagram</h3>
                             <span class="contact__card-data">becky_mweni</span>
 
-                            <a href="https://twitter.com/usertw" target="_blank" class="contact__button">
+                            <a href="https://Instagram.com/usertw" target="_blank" class="contact__button">
                                 Write Me <i class='bx bx-right-arrow contact__button-icon'></i>
                             </a>
                         </div>
@@ -661,7 +664,7 @@
     <!--=============== FOOTER ===============-->
     <footer class="footer">
         <div class="footer__container container">
-            <h1 class="footer__title">Becky Deluxe</h1>
+            <h1 class="footer__title">Becca Deluxe</h1>
 
             <ul class="footer__list">
 
