--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">Becky Designs Deluxe</a>
+            <div class="logo__container">
+                <div class="logo">
+                    <img class="logo__img" src="images/Becca Design Deluxe logo.png" alt=""> 
+                </div>
+                <a href="#" class="nav__logo">Becky <span class="d">Designs</span>  Deluxe</a>
+
+            </div>
 
             <div class="nav__menu">
                 <ul class="nav__list">
@@ -84,7 +90,7 @@
                 <div class="home__data">
                     <span class="home__greeting">Hello, I'm</span>
                     <h1 class="home__name">Becky</h1>
-                    <h3 class="home__education">Interior Designer & Graphic Designer</h3>
+                    <h3 class="home__education">Graphic Designer & Digital Marketter</h3>
 
                     <div class="home__button">
                         <a download="" href="Documents/REBECCA MUOKI. RESUME..pdf" class="button button--ghost">
@@ -103,12 +109,12 @@
                     <a href="#" target="_blank" class="home__social-link">
                         <i class='bx bxl-linkedin'></i>
                     </a>
-                    <a href="#" target="_blank" class="home__social-link">
+                    <!-- <a href="#" target="_blank" class="home__social-link">
                         <i class='bx bxl-pinterest'></i>
-                    </a>
-                    <a href="#" target="_blank" class="home__social-link">
+                    </a> -->
+                    <!-- <a href="#" target="_blank" class="home__social-link">
                         <i class='bx bxl-instagram'></i>
-                    </a>
+                    </a> -->
                 </div>
 
                 <a href="#about" class="home__scroll">
@@ -131,7 +137,7 @@
                         <div class="about__box">
                             <i class='bx bx-award about__icon'></i>
                             <h3 class="about__title">Experience</h3>
-                            <span class="about__subtitle">4 Years Working</span>
+                            <span class="about__subtitle">5 Years Working</span>
                         </div>
                         <div class="about__box">
                             <i class='bx bx-briefcase-alt about__icon'></i>
