--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <div class="services__container container grid">
                 <div class="services__card">
                     <div class="serv">
-                        <h3 class="services__title">Interior <br> Designing</h3>
+                        <h3 class="services__title">Graphic <br> Designing</h3>
 
                         <span class="services__button">
                             See More <i class='bx bx-right-arrow services__icon'></i>
@@ -320,7 +320,7 @@
                         <div class="services__modal-content">
                             <i class='bx bx-x services__modal-close'></i>
 
-                            <h3 class="services__modal-title">Interior Designing</h3>
+                            <h3 class="services__modal-title">Digital Marketting</h3>
 
                             <p class="services__modal-description">
                                 I design and develop the consumer products with creative ability and
