--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="#" target="_blank" class="home__social-link">
+                    <a href="https://www.linkedin.com/in/rebecca-muoki-345743194" target="_blank" class="home__social-link">
                         <i class='bx bxl-linkedin'></i>
                     </a>
                     <!-- <a href="#" target="_blank" class="home__social-link">
