--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
                     </a>
                 </li>
                 <li class="footer__social-item">
-                    <a href="#" target="_blank" class="footer__social-link">
+                    <a href="https://www.linkedin.com/in/rebecca-muoki-345743194" target="_blank" class="footer__social-link">
                         <i class='bx bxl-linkedin footer__social-icon'></i>
                     </a>
                 </li>
