--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                         <div class="services__modal-content">
                             <i class='bx bx-x services__modal-close'></i>
 
-                            <h3 class="services__modal-title">Digital Marketting</h3>
+                            <h3 class="services__modal-title">Graphic Designing</h3>
 
                             <p class="services__modal-description">
                                 I design and develop the consumer products with creative ability and
@@ -368,7 +368,7 @@
                 </div>
 
                 <div class="services__card">
-                    <h3 class="services__title">Graphic <br> Designing</h3>
+                    <h3 class="services__title">Digital <br> Marketting</h3>
 
                     <span class="services__button">
                         See More <i class='bx bx-right-arrow services__icon'></i>
@@ -378,7 +378,7 @@
                         <div class="services__modal-content">
                             <i class='bx bx-x services__modal-close'></i>
 
-                            <h3 class="services__modal-title">Graphic Designing</h3>
+                            <h3 class="services__modal-title">Digital Marketting</h3>
 
                             <p class="services__modal-description">
                                 I design and develop the consumer products with creative ability and
