--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="logo">
                     <img class="logo__img" src="images/Becca Design Deluxe logo.png" alt=""> 
                 </div>
-                <a href="#" class="nav__logo">Becky <span class="d">Designs</span>  Deluxe</a>
+                <a href="#" class="nav__logo">Becca<span class="d">Designs</span>Deluxe</a>
 
             </div>
 
@@ -89,7 +89,7 @@
             <div class="home__container container grid">
                 <div class="home__data">
                     <span class="home__greeting">Hello, I'm</span>
-                    <h1 class="home__name">Becky</h1>
+                    <h1 class="home__name">REBECCA MUOKI</h1>
                     <h3 class="home__education">Graphic Designer & Digital Marketter</h3>
 
                     <div class="home__button">
@@ -155,8 +155,7 @@
                         Highly creative and multi talented Graphic designer with extensive experience in multimedia, marketing and print design. Exceptional collaborative and interpersonal skills; dynamic team
                         player with well-developed written and verbal communication abilities. Highly skilled in client
                         and vendor relations and negotiations; talented at building and maintaining “win-win” partnerships. Passionate and inventive creator of innovative marketing strategies and
-                        campaigns; accustomed to performing in deadline-driven environments with an emphasis on
-                        working within budget requirements.                    </p>
+                        campaigns; accustomed to performing in deadline-driven environments.<P></P>
 
                     <a href="#contact" class="button about__button-contact">Contact Me</a>
                 </div>
@@ -170,7 +169,7 @@
 
             <div class="skills__container container grid">
                 <div class="skills__content">
-                    <h3 class="skills__title">Professional <br> Skills</h3>
+                    <h3 class="skills__title">Software <br> Skills</h3>
 
                     <div class="skills__box">
                         <div class="skills__group">
@@ -235,7 +234,7 @@
                 </div>
 
                 <div class="skills__content">
-                    <h3 class="skills__title">Graphic Designing</h3>
+                    <h3 class="skills__title">Profesional skilss</h3>
 
                     <div class="skills__box">
                         <div class="skills__group">
@@ -518,7 +517,7 @@
                     </a>
                 </div>
 
-                <div class="work__card mix design">
+                <!-- <div class="work__card mix design">
                     <img src="images/peter-olexa-Q5GnQxjX7Jk-unsplash.jpg" alt="" class="work__img">
 
                     <h3 class="work__title">Brand Design</h3>
@@ -526,7 +525,7 @@
                     <a href="brands.html" class="work__button">
                         Demo <i class='bx bx-right-arrow work__icon'></i>
                     </a>
-                </div>
+                </div> -->
 
                 <div class="work__card mix web">
                     <img src="images/codioful-formerly-gradienta-LeG68PrXA6Y-unsplash.jpg" alt="" class="work__img">
@@ -573,12 +572,14 @@
 
                         <h3 class="testimonial__name">Lorem</h3>
                         <p class="testimonial__description">
-                            A really good job, all aspects of the project were done well.
-                            Very creative and thoughtful. I was very impressed and would recommend this to anyone.
+                            We needed a fresh and engaging design for our marketing materials, 
+                            and the delivered work was beyond our expectations. The creative designs for logos, brochures, 
+                            posters, and fundraising campaigns helped us connect with our supporters on a deeper level. 
+                            Their design work has been instrumental in our growth.
                         </p>
                     </div>
 
-                    <div class="testimonial__card swiper-slide">
+                    <!-- <div class="testimonial__card swiper-slide">
                         <img src="assets/img/testimonial3.png" alt="" class="testimonial__img">
 
                         <h3 class="testimonial__name">Lorem</h3>
@@ -586,7 +587,7 @@
                             A really good job, all aspects of the project were done well.
                             Very creative and thoughtful. I was very impressed and would recommend this to anyone.
                         </p>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
@@ -606,7 +607,7 @@
                         <div class="contact__card">
                             <i class='bx bx-mail-send contact__card-icon'></i>
                             <h3 class="contact__card-title">Email</h3>
-                            <span class="contact__card-data">beckymueni501@gmail.com</span>
+                            <span class="contact__card-data">beccadesignsdeluxe</span>
 
                             <a href="mailto:example@domain.com" target="_blank" class="contact__button">
                                 Write Me <i class='bx bx-right-arrow contact__button-icon'></i>
@@ -627,7 +628,7 @@
                         <div class="contact__card">
                             <i class='bx bxl-instagram contact__card-icon'></i>
                             <h3 class="contact__card-title">Instagram</h3>
-                            <span class="contact__card-data">becky_mweni</span>
+                            <span class="contact__card-data">Becca Designs Deluxe</span>
 
                             <a href="https://Instagram.com/usertw" target="_blank" class="contact__button">
                                 Write Me <i class='bx bx-right-arrow contact__button-icon'></i>
@@ -670,7 +671,7 @@
     <!--=============== FOOTER ===============-->
     <footer class="footer">
         <div class="footer__container container">
-            <h1 class="footer__title">Becca Deluxe</h1>
+            <h1 class="footer__title">Becca Designs Deluxe</h1>
 
             <ul class="footer__list">
 
