--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
             <div class="skills__container container grid">
                 <div class="skills__content">
-                    <h3 class="skills__title">Software <br> Skills</h3>
+                    <h3 class="skills__title">Software Skills</h3>
 
                     <div class="skills__box">
                         <div class="skills__group">
@@ -234,7 +234,7 @@
                 </div>
 
                 <div class="skills__content">
-                    <h3 class="skills__title">Profesional skilss</h3>
+                    <h3 class="skills__title">Profesional Skills</h3>
 
                     <div class="skills__box">
                         <div class="skills__group">
@@ -507,7 +507,7 @@
                     </a>
                 </div>
 
-                <div class="work__card mix movil">
+                <!-- <div class="work__card mix movil">
                     <img src="images/nathan-mullet-dGdlQ56r--w-unsplash.jpg" alt="" class="work__img">
 
                     <h3 class="work__title"> Design</h3>
@@ -515,9 +515,9 @@
                     <a href="#" class="work__button">
                         Demo <i class='bx bx-right-arrow work__icon'></i>
                     </a>
-                </div>
+                </div> -->
 
-                <!-- <div class="work__card mix design">
+                <div class="work__card mix design">
                     <img src="images/peter-olexa-Q5GnQxjX7Jk-unsplash.jpg" alt="" class="work__img">
 
                     <h3 class="work__title">Brand Design</h3>
@@ -525,7 +525,7 @@
                     <a href="brands.html" class="work__button">
                         Demo <i class='bx bx-right-arrow work__icon'></i>
                     </a>
-                </div> -->
+                </div>
 
                 <div class="work__card mix web">
                     <img src="images/codioful-formerly-gradienta-LeG68PrXA6Y-unsplash.jpg" alt="" class="work__img">
@@ -575,7 +575,7 @@
                             We needed a fresh and engaging design for our marketing materials, 
                             and the delivered work was beyond our expectations. The creative designs for logos, brochures, 
                             posters, and fundraising campaigns helped us connect with our supporters on a deeper level. 
-                            Their design work has been instrumental in our growth.
+                            The design work has been instrumental in our growth.
                         </p>
                     </div>
 
