--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                         <div class="contact__card">
                             <i class='bx bx-mail-send contact__card-icon'></i>
                             <h3 class="contact__card-title">Email</h3>
-                            <span class="contact__card-data">beccadesignsdeluxe</span>
+                            <span class="contact__card-data">beccadesignsdeluxe@gmail.com</span>
 
                             <a href="mailto:example@domain.com" target="_blank" class="contact__button">
                                 Write Me <i class='bx bx-right-arrow contact__button-icon'></i>
