--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                     <div class="testimonial__card swiper-slide">
                         <img src="assets/img/testimonial1.png" alt="" class="testimonial__img">
 
-                        <h3 class="testimonial__name">Lorem</h3>
+                        <h3 class="testimonial__name">Jonathan .M.</h3>
                         <p class="testimonial__description">
                             A really good job, all aspects of the project were done well.
                             Very creative and thoughtful. I was very impressed and would recommend this to anyone.
@@ -570,7 +570,7 @@
                     <div class="testimonial__card swiper-slide">
                         <img src="assets/img/testimonial2.png" alt="" class="testimonial__img">
 
-                        <h3 class="testimonial__name">Lorem</h3>
+                        <h3 class="testimonial__name">Rose Wairimu</h3>
                         <p class="testimonial__description">
                             We needed a fresh and engaging design for our marketing materials, 
                             and the delivered work was beyond our expectations. The creative designs for logos, brochures, 
