--- a/index.html
+++ b/index.html
@@ -330,35 +330,35 @@
                                 <li class="services__modal-item">
                                     <i class='bx bx-check-circle'></i>
                                     <p class="services__modal-info">
-                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur, est.
+                                        Project Understanding and Research.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check-circle'></i>
                                     <p class="services__modal-info">
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, nemo!
+                                        Concept Development.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check-circle'></i>
                                     <p class="services__modal-info">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, eius!
+                                        Design Creation and Iteration.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check-circle'></i>
                                     <p class="services__modal-info">
-                                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora, iusto.
+                                        Review and Approval.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check-circle'></i>
                                     <p class="services__modal-info">
-                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus, hic.
+                                        Finalization and Delivery.
                                     </p>
                                 </li>
                             </ul>
@@ -388,35 +388,35 @@
                                 <li class="services__modal-item">
                                     <i class='bx bx-check-circle'></i>
                                     <p class="services__modal-info">
-                                        I develop the user interfaces.
+                                        Market Research and Analysis.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check-circle'></i>
                                     <p class="services__modal-info">
-                                        Brands design and development.
+                                        Keyword Research and SEO Optimization.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check-circle'></i>
                                     <p class="services__modal-info">
-                                        I create  graphics element interactions.
+                                        Content Strategy and Creation.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check-circle'></i>
                                     <p class="services__modal-info">
-                                        I position your company brand.
+                                        Paid Advertising Campaigns.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check-circle'></i>
                                     <p class="services__modal-info">
-                                        Create modern experiences.
+                                        Social Media Management.
                                     </p>
                                 </li>
                             </ul>
@@ -446,35 +446,35 @@
                                 <li class="services__modal-item">
                                     <i class='bx bx-check-circle'></i>
                                     <p class="services__modal-info">
-                                        I develop the user interfaces.
+                                        Research and Discovery.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check-circle'></i>
                                     <p class="services__modal-info">
-                                        Web Page design and development.
+                                        Concept Development.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check-circle'></i>
                                     <p class="services__modal-info">
-                                        I create the UX element interactions.
+                                        Design Iteration and Refinement.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check-circle'></i>
                                     <p class="services__modal-info">
-                                        I position your company brand.
+                                        Visual Elements and Typography.
                                     </p>
                                 </li>
 
                                 <li class="services__modal-item">
                                     <i class='bx bx-check-circle'></i>
                                     <p class="services__modal-info">
-                                        Create modern 3-D experiences.
+                                        Testing and Finalization.
                                     </p>
                                 </li>
                             </ul>
